# lucky-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  custom_job_TEMPLATE.yaml  data.dvc  gcp-key.json  last_user_data_sync.txt  pyproject.toml  tasks.py
.dvc/: config
.github/workflows/: cml_data.yaml  data_update.yaml  deploy_frontend.yaml  deploy_latest.yaml  tests.yaml  train_and_deploy.yaml  train_vertex.yaml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: bert_base.yaml
configs/training/: default.yaml
data/processed/: boolq_test.csv  boolq_test.parquet  boolq_train.csv  boolq_train.parquet  cm_test.csv  cm_test.parquet  cm_train.csv  cm_train.parquet  justice_test.csv  justice_test.parquet  justice_train.csv  justice_train.parquet  strategyqa_test.csv  strategyqa_test.parquet  strategyqa_train.csv  strategyqa_train.parquet
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
frontend/: .env.example  App.tsx  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite-env.d.ts  vite.config.ts
frontend/api/: oracleClient.ts
frontend/components/: HistoryPanel.tsx  QuestionCard.tsx  ResultPanel.tsx  SettingsDrawer.tsx  ThemeSwitcher.tsx  Toast.tsx  Wheel.tsx
frontend/src/: vite-env.d.ts
frontend/themes/: ThemeProvider.tsx  themes.ts
frontend/utils/: audio.ts  format.ts  hash.ts  rng.ts
models/lightning_logs/version_1/: metrics.csv
models/lightning_logs/version_2/: hparams.yaml
reports/: README.md  report.html
src/lucky_ai/: api.py  data.py  database.py  dataset.py  download_model.py  model.py  train.py
tests/: test_data.py  test_dataset.py  test_model.py
tests/performancetests/: locustfile.py
