[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lucky_ai"
version = "0.0.1"
description = "An AI lucky wheel"
authors = [
  { name = "holmesec", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=4.5.0",
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "pandas>=2.3.3",
    "pathspec>=0.11.1,<0.12",
    "hydra-core>=1.3.2",
    "pytorch-lightning>=2.6.0",
    "pywin32>=311; sys_platform == 'win32'",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "transformers>=4.57.5",
    "typer==0.15.1",
    "click>=8.1.3,<8.2.0",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" }
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" }
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" }
]



[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
preprocess = "lucky_ai.data:preprocess_app"
add-data = "lucky_ai.data:add_data_app"
check-data-stats = "lucky_ai.dataset:dataset_statistics"
